[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/Menu.gd" type="Script" id=1]
[ext_resource path="res://Shaders/main.tres" type="Theme" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.372549, 0.721569, 0.454902, 1 )
text = "LEVEL 1"

[node name="Button11" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 456.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0.372549, 0.721569, 0.454902, 1 )
text = "TUTORIAL"

[node name="Button2" type="Button" parent="."]
margin_left = 64.0
margin_top = 160.0
margin_right = 256.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0.372549, 0.721569, 0.454902, 1 )
text = "LEVEL 2"

[node name="Button3" type="Button" parent="."]
margin_left = 64.0
margin_top = 208.0
margin_right = 256.0
margin_bottom = 239.0
custom_colors/font_color = Color( 0.372549, 0.721569, 0.454902, 1 )
text = "LEVEL 3"

[node name="Button4" type="Button" parent="."]
margin_left = 64.0
margin_top = 248.0
margin_right = 256.0
margin_bottom = 287.0
custom_colors/font_color = Color( 0.372549, 0.721569, 0.454902, 1 )
text = "LEVEL 4"

[node name="Button5" type="Button" parent="."]
margin_left = 64.0
margin_top = 296.0
margin_right = 256.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.929412, 0.662745, 0.352941, 1 )
text = "LEVEL 5"

[node name="Button6" type="Button" parent="."]
margin_left = 264.0
margin_top = 112.0
margin_right = 456.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.929412, 0.662745, 0.352941, 1 )
text = "LEVEL 6"

[node name="Button7" type="Button" parent="."]
margin_left = 264.0
margin_top = 160.0
margin_right = 456.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0.929412, 0.662745, 0.352941, 1 )
text = "LEVEL 7"

[node name="Button8" type="Button" parent="."]
margin_left = 264.0
margin_top = 208.0
margin_right = 456.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0.85098, 0.0862745, 0.341176, 1 )
text = "LEVEL 8"

[node name="Button9" type="Button" parent="."]
margin_left = 264.0
margin_top = 248.0
margin_right = 456.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0.85098, 0.0862745, 0.341176, 1 )
text = "LEVEL 9"

[node name="Button10" type="Button" parent="."]
margin_left = 264.0
margin_top = 296.0
margin_right = 456.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.85098, 0.0862745, 0.341176, 1 )
text = "LEVEL 10"

[node name="Panel" type="Panel" parent="."]
margin_left = 472.0
margin_top = 64.0
margin_right = 1216.0
margin_bottom = 288.0

[node name="Label" type="Label" parent="."]
margin_left = 488.0
margin_top = 80.0
margin_right = 1200.0
margin_bottom = 259.0
text = "DEMO INSTRUCTIONS

Bouncers on side of screen contain values which will change the value of the ball.
The balls must enter the collection zone with the corresponding value.
Not all bouncers need to be used.
Game can be zoomed using bottom bar to allow for more space."
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 688.0
margin_right = 200.0
margin_bottom = 712.0
text = "Made in Godot 3.5.1"
valign = 1
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_Button10_pressed"]
